[package]
name = "tracing-async-server-levelfilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = [
    "default",
    "alloc",
    "std",
    "env-filter",
    "fmt",
    "ansi",
    "registry",
    "json",
] }
